# cloudlaunch

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  Procfile  ProcfileDev  ProcfileHoncho  ProcfileProduction  README.md  README.rst  bcc.conf  bcc_celery.conf  bcc_nginx.conf  bcc_run_server.sh  cl.conf  cl_celery.conf  cl_nginx.conf  cl_run_server.sh  cl_supervisor.conf  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
biocloudcentral/: admin.py  aws_db_data.json  forms.py  models.py  settings.py  settings_local.py  settings_local.py.sample  tasks.py  urls.py  views.py  wsgi.py
biocloudcentral/amazon/: __init__.py  launch.py
biocloudcentral/cbltweaker/: urls.py  views.py
biocloudcentral/migrations/: 0001_initial.py  0002_auto__add_field_cloud_cidr_range__chg_field_cloud_ec2_port__chg_field_.py  0002_auto__add_instancetype.py  0003_auto__add_databucket__add_field_image_description.py  0004_auto__add_usage.py  0005_auto__add_field_usage_email.py  0006_auto__add_flavor.py  0007_auto__add_field_usage_cluster_type__add_field_usage_storage_type.py  0008_auto__add_field_usage_storage_size.py  0009_auto__chg_field_cloud_s3_host__chg_field_cloud_s3_conn_path.py
django-cloudlaunch/: cloudlaunch_clouds_and_apps.json  manage.py
django-cloudlaunch/baselaunch/: __init__.py  admin.py  apps.py  (+13 more)
doc/: apache_wsgi.md
docs/: Makefile  conf.py  index.rst
templates/: 500.html  base.html  home.html  launch.html  monitor.html  robots.txt
tests/: run_cli_integration_tests.sh  run_tests.sh
(+136 files in other folders)
