[bumpversion]
current_version = 4.0.0+dev0
tag = False
commit = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}+{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:file:django-cloudlaunch/cloudlaunchserver/__init__.py]

[bumpversion:file:docs/conf.py]
search = {current_version}
replace = {new_version}

[metadata]
description-file = README.rst

[flake8]
exclude = 
	build, docs, dist,
	*/migrations,
